fixes #1: Fix maven build

--- a/changelog.html
+++ b/changelog.html
@@ -40,6 +40,11 @@
 
 <h1>TikiToken Plugin Changelog</h1>
 
+<p><b>0.3</b> -- (tbd)</p>
+<ul>
+    <li>[<a href='https://github.com/igniterealtime/openfire-tikitoken-plugin/issues/1'>#1</a>] - Fix Maven build</li>
+</ul>
+
 <p><b>0.2</b> -- March 21, 2017</p>
 <ul>
     <li>Replaced AuthProvider-based approach by a SASL mechanism-based approach.</li>
