--- a/changelog.html
+++ b/changelog.html
@@ -40,7 +40,7 @@
 
 <h1>TikiToken Plugin Changelog</h1>
 
-<p><b>0.3</b> -- (tbd)</p>
+<p><b>0.2.1</b> -- November 20, 2023</p>
 <ul>
     <li>[<a href='https://github.com/igniterealtime/openfire-tikitoken-plugin/issues/1'>#1</a>] - Fix Maven build</li>
 </ul>
