--- a/changelog.html
+++ b/changelog.html
@@ -40,6 +40,10 @@
 
 <h1>TikiToken Plugin Changelog</h1>
 
+<p><b>0.2.2</b> -- To Be Determined</p>
+<ul>
+</ul>
+
 <p><b>0.2.1</b> -- November 20, 2023</p>
 <ul>
     <li>[<a href='https://github.com/igniterealtime/openfire-tikitoken-plugin/issues/1'>#1</a>] - Fix Maven build</li>
